Case-1-deny-all-incoming-to-webapp.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all-incoming-to-webapp
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app: backend 
  ingress: []
