Case-12-allow-traffic-from-some-pods-in-a-namespace.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-traffic-from-selected-pods-in-a-namespace
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: web
  policyTypes:
  - Ingress
  ingress:
    - from:
      - namespaceSelector:     # chooses namespace labelled with purpose:development
          matchLabels:
            purpose: development 
        podSelector:           # chooses pods with app:api
          matchLabels:
            app: api
