Case-2-Limit-traffic-to-webapp.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: limit-incoming-to-webapp
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app: backend 
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: frontend
