Case-3-allow-all-incoming-to-webapp.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-all-incoming-to-webapp
  namespace: default
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app: backend
  ingress:
  - {}
