Case-5-limit-egress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: limit-egress-from-pod
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app: frontend 
  egress:
  - to:
      - podSelector:
          matchLabels:
            app: backend
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
