Case-7-ALLOW traffic from apps using multiple selectors.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-multiple-pods
spec:
  podSelector:
    matchLabels:
      app: web
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: inventory 
    - podSelector:
        matchLabels:
          role: contributor
    - podSelector:
        matchLabels:
          api: apiVersion
