Case-7-deny-all-ingress-to-namespace.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all-ingress-to-namespace
  namespace: default
spec:
  podSelector: {}
  ingress: []
