Case-8-deny-all-egress-from-namespace.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all-egress-from-namespace
  namespace: production
spec:
  policyTypes:
  - Egress
  podSelector: {}
  egress: []
