Subnets-and-ip-addresses.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-dns
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 8.8.8.8/32
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
